# bluetooth-numbers

./: .coveragerc  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.rst  Makefile  README.md  README.rst  package.json  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  tests.yml
data/: member_service_uuids.json  sdo_service_uuids.json
docs/: conf.py  index.rst  requirements.txt  usage.rst
scripts/: generate_badges.py  generate_modules.py
src/bluetooth_numbers/: __init__.py  _characteristics.py  _companies.py  _descriptors.py  _ouis.py  _services.py  characteristics.py  companies.py  descriptors.py  dicts.py  exceptions.py  ouis.py  reverse_lookup.py  services.py  utils.py
templates/: companies.py.jinja  ouis.py.jinja  uuids.py.jinja
tests/: __init__.py  conftest.py  test_characteristics.py  test_companies.py  test_descriptors.py  test_ouis.py  test_reverse_lookup.py  test_services.py  test_utils.py
