[build-system]
# AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
requires = ["setuptools>=46.1.0", "setuptools_scm[toml]>=5"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
# For smarter version schemes and other configuration options,
# check out https://github.com/pypa/setuptools_scm
version_scheme = "no-guess-dev"

[tool.ruff]
select = ["ALL"]
ignore = [
  "ANN101",  # flake8-annotations
  "FBT",     # flake8-boolean-trap
]
fix = true
fixable = [
  "COM812",  # trailing comma missing
  "RUF001",  # ambiguous Unicode character
]
# Always generate Python 3.7-compatible code
target-version = "py37"

src = ["src", "test"]

[tool.ruff.per-file-ignores]
"src/bluetooth_numbers/_*.py" = [
  "E501",    # line too long
]
"scripts/*.py" = [
  "INP001",  # implicit namespace package
]
"setup.py" = [
  "T201",    # print
]
"tests/*" = [
  "S101",    # assert
]

[tool.ruff.pydocstyle]
convention = "google"
